samples/_failures_safe/1761317268_3c61c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_224081ff.c: In function ‘main’:
./samples/SAFE/__tmp_224081ff.c:133:5: error: expected declaration or statement at end of input
  133 |     printf("\nVector Operations:\n");
      |     ^~~~~~
